fix: use method refs